v4.9.0/_sources/generated/pcdsdevices.pim.PIMWithLED.rst.txt
pcdsdevices.pim.PIMWithLED
==========================

.. currentmodule:: pcdsdevices.pim

.. autoclass:: PIMWithLED

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~pcdsdevices.pim.PIMY`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pim.PIM`
    
        * - zoom_motor (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_zoom}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pim.PIM`
    
        * - detector (FCpt)
          - :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorEmbedded`
          - ``{self._prefix_det}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pim.PIM`
    
        * - led (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{self._prefix_led}``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: infer_prefix
    .. automethod:: insert
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: prefix_start
    .. autoattribute:: stage_group
    
    